Disabled outsourcing link for webview

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <!-- <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
                     <a class="nav-link" href="https://github.com/lchyeon0123/yourcolor">프로젝트 Github 링크
@@ -50,7 +50,7 @@
                 </li>
             </ul>
             
-        </div>
+        </div> -->
     </nav>
     <section class="section">
         <h1 class="title" onclick="test2();">너의 퍼스널 컬러는</h1>
@@ -58,10 +58,10 @@
         <h2 class="subtitle">인공지능이 당신의 얼굴 사진을 분석하여 퍼스널 컬러를 진단합니다!</h2>
     </section>
     <section class="youtube pb-3" id="yotube-mid-link">
-        <div class="container mt-3 youtube-cover d-flex flex-row-reverse align-items-center">
+        <!-- <div class="container mt-3 youtube-cover d-flex flex-row-reverse align-items-center">
             <img src="img/github.png" alt="youtube-icon" class="youtube-icon">
             <a href="https://github.com/lchyeon0123/yourcolor" class="youtube-link">By 로보틱스 총무 듀오 이종헌, 이채현 </a>
-        </div>
+        </div> -->
     </section>
     <!-- sr-only class로 남자 여자를 선택하는 토글을 우선적으로 안보이게 설정하였다. 추후 소고기 이외의 돼지고기등이 추가가 되면 sr-only 클래스를 삭제하면 다시 나타나게 된다. -->
     <h3 class="sr-only pb-2 d-flex justify-content-center">성별을 선택하세요</h3>
@@ -100,7 +100,7 @@
             <p class="result-message"></p>
             <div id="label-container" class="d-flex flex-column justify-content-around"></div>
         
-            <div class="addthis_inline_share_toolbox"></div>
+            <!-- <div class="addthis_inline_share_toolbox"></div> -->
 
             <div class="pt-3 image-title-wrap">
                 <button type="button p-2" class="try-again-btn" onclick="window.location.reload();">
