Temporary change for the license

--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
     </div>
     <footer class="footer pt-5 container d-flex justify-content-center">
         <div>
-            <p>&copy; 이종헌, 이채현 Robotics Hackathon 2022. All Rights Reserved. </p>
+            <!-- <p>&copy; 이종헌, 이채현 Robotics Hackathon 2022. All Rights Reserved. </p> -->
+            <p>&copy; SSU Robotics 2022. All Rights Reserved. </p>
         </div>
     </footer>
     <script>
